fixed the styling and background images and text colors so it can be readable

--- a/Project_One-Map_APIs/public/stylesheets/main.css
+++ b/Project_One-Map_APIs/public/stylesheets/main.css
@@ -1,6 +1,7 @@
 body {
     font-family: Helvetica;
     background-attachment: fixed;
+    background-image: url("../imgs/battlefield-3-wind-energy.jpg")
 }
 
 .m-devider {
